--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="home-content" id="home-page">
       <div class="name">
         <h1>Hi, I'm Khushal</h1>
-        <p>A Web Developer in training.</p>
+        <p>A Python Developer at Maxgen Technologies Pvt Ltd.</p>
       </div>
       <div class="angle-down-icon">
         <a href="#about"><i class="fas fa-angle-down"></i></a>
@@ -41,7 +41,7 @@
           </div>
           <img src="https://i.postimg.cc/Hx4nChpH/fbavatar-1630400663387-6838396024049256103.png" alt="image" />
           <p>
-            I am 24 year old, MSc-CS student studied at Gopikabai Sitaram Gawande College Umarkhed.
+            I am 25 year old, MSc-CS student studied at Gopikabai Sitaram Gawande College Umarkhed.
             I really enjoy solving problems as well as making things pretty and easy to use. I can't stop learning new
             things; the more, the better.
           </p>
@@ -74,12 +74,12 @@
                     <div class="progress-line"><span class="SQL"></span></div>
                     <div class="bar">
                       <div class="info">
-                        <span>JAVASCRIPT</span>
+                        <span>Python</span>
                       </div>
                       <div class="progress-line"><span class="javascript"></span></div>
                       <div class="bar">
                         <div class="info">
-                          <span>Core Java</span>
+                          <span>Django</span>
                         </div>
                         <div class="progress-line"><span class="Core"></span></div>
                       </div>
