--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                       <div class="info">
                         <span>Python</span>
                       </div>
-                      <div class="progress-line"><span class="javascript"></span></div>
+                      <div class="progress-line"><span class="Python"></span></div>
                       <div class="bar">
                         <div class="info">
                           <span>Django</span>
                         </div>
-                        <div class="progress-line"><span class="Core"></span></div>
+                        <div class="progress-line"><span class="Django"></span></div>
                       </div>
                     </div>
                   </div>
